--- a/package.json
+++ b/package.json
@@ -2,22 +2,27 @@
   "name": "@smonn/storage",
   "version": "0.0.0",
   "description": "",
-  "type": "module",
-  "main": "dist/index.cjs",
-  "module": "dist/index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsup",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "tsup"
   },
   "keywords": [],
   "author": "Simon Ingeson",
   "license": "MIT",
   "devDependencies": {
+    "@cypress/code-coverage": "^3.10.7",
     "@tsconfig/node18": "^2.0.1",
     "@tsconfig/recommended": "^1.0.2",
     "@tsconfig/strictest": "^2.0.1",
+    "@types/node": "^20.3.0",
+    "cypress": "^12.14.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tsup": "^6.7.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "vite": "^4.3.9"
   }
 }
